Fix spacing on domain labels, adjust file structure for the filter components

--- a/src/styles/FilterForm.css
+++ b/src/styles/FilterForm.css
@@ -27,30 +27,3 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start; }
-
-.domain-label {
-  text-transform: uppercase;
-  border-bottom: 1px solid #4a484c;
-  width: 90%;
-  display: inline-block;
-  height: 28px; }
-
-.standard-checkbox {
-  margin: 0px 25% 10px 30%;
-  display: flex; }
-
-.state {
-  display: flex;
-  flex-direction: row;
-  align-items: center; }
-
-.icon {
-  background-image: url(../assets/check.svg);
-  height: 5px;
-  width: 5px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: none; }
-
-label {
-  font-size: 85%; }
